overlays/istio_blue_greeen/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: docker.io/argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        name: blue
        ports:
        - containerPort: 8000
