overlays/istio_blue_greeen/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - image: docker.io/argoproj/rollouts-demo:green
        imagePullPolicy: IfNotPresent
        name: green
        ports:
        - containerPort: 8000
