overlays/istio_blue_greeen/green_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: green
  type: ClusterIP
