overlays/istio_blue_greeen/blue_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue
spec:
  hosts:
  - BLUE_REDACTED
  gateways:
  - bg-gateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: blue.app.svc.cluster.local
